--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
 
     <string name="empty" />
     <string name="add">Add</string>
-    <string name="app_name">Community Manager</string>
+    <string name="app_name">MyPeople</string>
 
     <string name="home_tab_me">Me</string>
     <string name="home_tab_mygroups">My Groups</string>
