--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,7 +22,7 @@
 
     <string name="home_tab_me">Me</string>
     <string name="home_tab_mygroups">My Groups</string>
-    <string name="home_tab_mycommunities">My Communities</string>
+    <string name="home_tab_mycommunities">Campus</string>
     
     <string name="campus_tab_people">People</string>
     <string name="campus_tab_suggested">Suggested</string>
@@ -71,14 +71,14 @@
     <string name="mygroups_name_duplicate">Group with this name already exists</string>
     
     <string name="create_topic_name">Title:</string>
-    <string name="create_topic_def">Tags:</string>
+    <string name="create_topic_def">About what?</string>
     <string name="create_topic_add">Add</string>
-    <string name="create_topic_sources">Sources:</string>
+    <string name="create_topic_sources">Where from?</string>
     <string name="create_topic_def_hint">*Define your topic with tags.</string>
       <!-- <string name="create_topic_def_hint">*A topic can be defined by text tags, semantic tags and entities.</string>-->
     <string name="create_topic_sources_hint">*Where do the info come from? (people, groups, communities)</string>
     <!-- <string name="create_topic_sources_hint">*Sources may include people, groups and communities.</string> -->
-    <string name="create_topic_content">Content:</string>
+    <string name="create_topic_content">What kind of content?</string>
     
     <string name="create_topic_arg_topic">topic</string>
     <string name="mytopics_add">Add</string>
