fix strings, add value-it, add tutorial voice in navigation drawer

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,8 @@
         <item>Campus</item>
         <item>MyGroups</item>
         <item>MyProfile</item>
-        <item>Settings</item>
+        <item>Synchronize</item>
+        <item>Tutorial</item>
     </string-array>
 
     <string name="home_tab_me">Me</string>
