--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -21,9 +21,9 @@
     <string name="app_name">MyPeople</string>
 
     <string-array name="fragment_array">
+        <item>Gruppi</item>
         <item>Condivisi</item>
         <item>Campus</item>
-        <item>Gruppi</item>
         <item>Profilo</item>
         <item>Sincronizza</item>
         <item>Tutorial</item>
@@ -134,4 +134,7 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
 
+    <string name="sync_ok">Ora i dati sono sincronizzati</string>
+    <string name="sharing_title">Condividi \'%s\'</string>
+    
 </resources>
